- Upgraded dependencies - Minor updates in README.md